--- a/tests/spi/CMakeLists.txt
+++ b/tests/spi/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(TEST_spi test_spi.c)
-target_link_libraries(TEST_spi avrunit)
 setup_avr_target(TEST_spi)
+target_link_libraries(TEST_spi avrunit spi)
+set_target_properties(TEST_spi PROPERTIES SPI_PRIVATE 1)
 
 add_avr_test(TEST_spi)
