--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,5 @@
 add_library(spi STATIC spi.c)
 setup_avr_target(spi)
 target_include_directories(spi PUBLIC
-    "$<BUILD_INTERFACE:$<$<BOOL:$<TARGET_PROPERTY:SPI_PRIVATE>>:${CMAKE_SOURCE_DIR}>>")
+    "$<BUILD_INTERFACE:$<$<BOOL:$<TARGET_PROPERTY:SPI_PRIVATE>>:${CMAKE_CURRENT_SOURCE_DIR}>>")
 set_target_properties(spi PROPERTIES SPI_PRIVATE 1)
-
-
