--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ target_include_directories(avrunit INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_subdirectory(spi)
+add_subdirectory(sd)
